[package]
name = "egui-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = "0.18.0"
env_logger = "0.11.1"
log = "0.4.20"
pollster = "0.3.0"
egui = "0.24.0"
egui-wgpu = "0.24.0"
egui-winit = "0.24.0"

